[package]
name = "water-level"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bitflags = "2.8.0"
dotenv = "0.15.0"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3.6"
futures = "0.3.31"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
rand = "0.9.0"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
